Add post and comment details to blog view

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,13 @@
 
   <main>
     {{{body}}}
+    {{#each comments}}
+  {{> comment-details}}
+{{/each}}
+{{#each blogPosts}}
+  {{> post-details}}
+{{/each}}
+
   </main>
 
   <!-- Add JavaScript here -->
